; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_bridgestp.c_bstp_message_age_expiry.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_bridgestp.c_bstp_message_age_expiry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bstp_state = type { i32 }
%struct.bstp_port = type { i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@BSTP_INFO_RECEIVED = common dso_local global i64 0, align 8
@BSTP_INFO_AGED = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [17 x i8] c"aged info on %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bstp_state*, %struct.bstp_port*)* @bstp_message_age_expiry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bstp_message_age_expiry(%struct.bstp_state* %0, %struct.bstp_port* %1) #0 {
  %3 = alloca %struct.bstp_state*, align 8
  %4 = alloca %struct.bstp_port*, align 8
  store %struct.bstp_state* %0, %struct.bstp_state** %3, align 8
  store %struct.bstp_port* %1, %struct.bstp_port** %4, align 8
  %5 = load %struct.bstp_port*, %struct.bstp_port** %4, align 8
  %6 = getelementptr inbounds %struct.bstp_port, %struct.bstp_port* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @BSTP_INFO_RECEIVED, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %22

10:                                               ; preds = %2
  %11 = load i64, i64* @BSTP_INFO_AGED, align 8
  %12 = load %struct.bstp_port*, %struct.bstp_port** %4, align 8
  %13 = getelementptr inbounds %struct.bstp_port, %struct.bstp_port* %12, i32 0, i32 0
  store i64 %11, i64* %13, align 8
  %14 = load %struct.bstp_state*, %struct.bstp_state** %3, align 8
  %15 = call i32 @bstp_assign_roles(%struct.bstp_state* %14)
  %16 = load %struct.bstp_port*, %struct.bstp_port** %4, align 8
  %17 = getelementptr inbounds %struct.bstp_port, %struct.bstp_port* %16, i32 0, i32 1
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @DPRINTF(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 %20)
  br label %22

22:                                               ; preds = %10, %2
  ret void
}

declare dso_local i32 @bstp_assign_roles(%struct.bstp_state*) #1

declare dso_local i32 @DPRINTF(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
